# cplusplus-snake

./: CMakeLists.txt
src/: board.cc  board.h  config.cc  config.h  draw.cc  game.cc  game.h  main.cpp  point.cc  point.h  snake.cc  snake.h
